[tool.poetry]
name = "telebd"
version = "0.1.0"
description = "Simple manage your database through telegram"
authors = ["Sirius Bell"]
readme = "README.md"
packages = [{ include = "TeleBD" }]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
uvloop = {version = "^0.19.0", platform = "linux"}
asyncio = "^3.4.3"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.0"
aiogram = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
