[tool.poetry]
name = "telebd"
version = "0.1.0"
description = "Simple manage your database through telegram"
authors = ["Sirius Bell"]
readme = "README.md"
packages = [{ include = "tele_bd"}]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
uvloop = { version = "^0.19.0", platform = "linux" }
asyncio = "^3.4.3"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.0"
aiogram = "^3.2.0"
pydantic-settings = "^2.1.0"
async-class = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pyment = "^0.3.3"
sphinx = "^7.2.6"
sphinx-autopackagesummary = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
